[package]
name = "pm"
version = "0.4.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anstyle = "1.0.4"
argon2 = "0.5.2"
chrono = { version = "0.4.31", features = ["rkyv", "serde"] }
clap = { version = "4.4.7", features = ["derive"] }
clipboard = "0.5.0"
dialoguer = { version = "0.11.0", default-features = false, features = ["password"] }
dirs = "5.0.1"
hashbrown = { version = "0.14.2", features = ["rkyv", "serde"] }
json = { package = "serde_json", version = "1.0.108" }
owo-colors = "3.5.0"
rand = "0.8.5"
rkyv = "0.7.42"
ron = "0.8.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["hex"] }
toml = "0.8.6"
yaml = { package = "serde_yaml", version = "0.9.27" }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
