[package]
name = "pm"
version = "0.9.3"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
anstyle = "1.0.4"
argon2 = "0.5.2"
clap = { version = "4.4.7", features = ["derive"] }
clipboard = "0.5.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
email_address = { version = "0.2.4", default-features = false }
git2 = "0.18.1"
hashbrown = { version = "0.14.2", features = ["rkyv", "serde"] }
owo-colors = "3.5.0"
rand = "0.8.5"
rkyv = { version = "0.7.42", features = ["validation"] }
snafu = "0.7.5"
tar = "0.4.40"
url = "2.4.1"
whoami = { version = "1.4.1", default-features = false }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
